# SafetyLM

./: .gitignore  AGENTS.md  CLAUDE.md  DATA-LICENSE.md  LICENSE  README.md  pyproject.toml  requirements.txt
corpus/: README.md
corpus/manifest/: README.md  corpus_manifest.csv  corpus_manifest.xlsx  generate_manifest.py  ~$corpus_manifest.xlsx
docs/: 00-vision.md  01-architecture.md  02-model-selection.md  03-corpus-strategy.md  04-rag-pipeline.md  05-evaluation.md  06-phased-roadmap.md  07-distribution.md  08-governance.md
docs/learning/: concepts.md
docs/research/: 2026-06-29-model-landscape.md  2026-06-30-whs-source-map.md
embeddings/: README.md
eval/: README.md
rag/: README.md
scripts/: README.md  chunk_corpus.py  download_corpus.py  extract_text.py
